Recompiled SDK after API spec changes
